# OpenPraxis

./: .gitignore  LICENSE  Makefile  README.md  config.example.toml  pyproject.toml
.github/workflows/: publish.yml
openclaw-knowledge-coach/: SKILL.md
openclaw-knowledge-coach/agents/: openai.yaml
openclawn-knowledge-coach/: SKILL.md
openclawn-knowledge-coach/agents/: openai.yaml
src/openpraxis/: __init__.py  cli.py  config.py  db.py  display.py  graph.py  llm.py  models.py  prompts.py  runtime.py
src/openpraxis/llm_backends/: base.py  cli_backend.py  openclaw_backend.py
src/openpraxis/nodes/: __init__.py  insight.py  practice.py  tagger.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_db.py  test_graph.py  test_llm.py  test_llm_backends.py  test_models.py  test_nodes.py  test_runtime.py
tests/fixtures/: sample_idea.md  sample_interview.md  sample_reflection.md  sample_report.md
