[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpraxis"
version = "0.1.0"
description = "AI Bandwidth Amplifier - turn notes into structured practice and actionable learning insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.6",
    "tomli-w>=1.0",
    "openai>=1.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
]

[project.scripts]
praxis = "openpraxis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openpraxis"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
